[package]
name = "openvpn-access-exporter"
version = "0.1.4"
authors = ["Luis Felipe Domínguez Vega <ldominguezvega@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6.2"
log = "0.4.8"
clap = "2.33.0"
prometheus = { git = "https://github.com/lfdominguez/rust-prometheus.git" }
sqlite = "0.24.0"
lazy_static = "1.4.0"
hyper = "0.12.33"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
