[package]
name = "openvpn-access-exporter"
version = "0.1.4"
authors = ["Luis Felipe Domínguez Vega <ldominguezvega@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.11"
log = "0.4"
clap = "4.5"
prometheus = { git = "https://github.com/lfdominguez/rust-prometheus.git" }
sqlite = "0.33"
lazy_static = "1.4"
hyper = "1.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
